gap correction

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -30,6 +30,7 @@
     margin: 20px;
     & .__link {
       text-transform: uppercase;
+      gap: 10px;
 
       & a {
         font-size: 12px;
